using UnityEditor;
using UnityEngine;


public static class EnemyConst 
{
    #region Animations

    // PARAMETERS
    public const string ATTACK_TRIGGER_CONST = "isAttacking";
    public const string ATTACK_BOOL_CONST = "isAttacking";
    public const string SPEED_CONST = "Speed";
    public const string DIRECTION_X_CONST = "lastMoveX";
    public const string DIRECTION_Y_CONST = "lastMoveY";
    public const string FLEE_BOOL_CONST = "isFleeing";
    public const string DEATH_TRIGGER_CONST = "isDying";


    #endregion

    #region Player
    public const string PLAYER_TAG = "Player";
    #endregion
}
